# pendulum_graphics

./: .gitignore  CMakeLists.txt  README.md  README.txt  a.sh  gl_pendulum.cpp
